k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: explorecalifornia.com
  name: explorecalifornia.com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorecalifornia.com
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: explorecalifornia.com
    spec:
      containers:
      - image: 127.0.0.1:5000/explorecalifornia.com
        name: explorecalifornia-com-xjwpj
        resources: {}
status: {}
